<?xml version="1.0"?>
<package format="2">
  <name>exercise_3_1</name>
  <version>0.0.0</version>
  <description>The masteruvic exercise 3.1 package</description>
  <maintainer email="david@maig.io">david</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

       <export>

  </export>
</package>
